# cewai-sentinel-code-agent

./: .commit_log  .dockerignore  .gitignore  Dockerfile.api  README.md  api.py  backdate_commits.sh  dashboard_backup.js  diagram.py  docker-compose.yml  main.py  package-lock.json  pyproject.toml
frontend/sentinel-agent/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/sentinel-agent/src/app/: globals.css  layout.js
frontend/sentinel-agent/src/app/agents/: page.js
frontend/sentinel-agent/src/app/components/: AnimatedCard.js  Footer.js  Header.js  HeroSection.js  Sidebar.js
frontend/sentinel-agent/src/app/docs/: page.js
frontend/sentinel-agent/src/app/pages/: agents.js  dashboard.js  landing.js
frontend/sentinel-agent/src/components/ui/: vapour-text-effect.jsx
issues/: fixed_files_report.md  summary_report.md
sentinel_agent/: README.md  pyproject.toml
sentinel_agent/issues/: fixed_files_report.md  summary_report.md
sentinel_agent/src/sentinel_agent/: __init__.py  crew.py  main.py
sentinel_agent/src/sentinel_agent/config/: agents.yaml  tasks.yaml
sentinel_agent/src/sentinel_agent/tools/: custom_tool.py  github_push_tool.py
sentinel_agent/tests/: test1.py  test2.py  test3,py  test4.py  test5.py
