[project]
name = "sentinel_agent"
version = "0.1.0"
description = "sentinel_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "litellm>=1.75.3",
    "python-dotenv>=1.0.0",
    "langfuse>=2.0.0",
    "apscheduler>=3.10.4",
    "email-validator>=2.2.0",
    "fastapi-sso>=0.16.0",
]

[project.scripts]
sentinel_agent = "sentinel_agent.main:run"
run_crew = "sentinel_agent.main:run"
train = "sentinel_agent.main:train"
replay = "sentinel_agent.main:replay"
test = "sentinel_agent.main:test"
run_with_trigger = "sentinel_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
